[package]
name = "mcproxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
async-trait = "0.1.56"
env_logger = "0.9.0"
log = "0.4.17"
tokio = { version = "1.19.2", features = ["full"] }
